[project]
name = "duckdb-extra-asyncio"
version = "2025.9.15"
description = "Python asyncio bindings for DuckDB"
authors = [{ name = "fairydream", email = "cn.fairydream@outlook.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11, <4.0"
dependencies = [
    "duckdb",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/cnfairydream/duckdb-extra-asyncio"
Repository = "https://github.com/cnfairydream/duckdb-extra-asyncio"
